# hermes-hybrid

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  discord_conflict_notifier.py  pyproject.toml  run_all.bat  start.bat  start.ps1
.claude/: settings.json
config/: benchmark_prompts.yaml  cloud_policy.yaml  game_mode_routing.yaml  game_whitelist.yaml  job_factory.yaml  model_registry.yaml  provider_routing.generated.yaml  skill_category_map.generated.yaml
docs/: AGENT_ENV.md  AGENT_INVENTORY.md  JOB_INVENTORY.md  MASTER_ARCHITECTURE.md  PROFILE_INVENTORY.md  PROFILE_JOB_MAP.md  apply_plan.generated.md  architecture-flow.md  architecture.md  calendar_ops_runbook.md  growth_agent_ops.md  hermes_agent_gap_analysis.generated.md  job-factory-v2-rollout.md  local-first-decisions.md  mcp_capabilities.generated.md
memory/: memory_candidates.generated.yaml
one_off_migration/: append_env.sh  archive_11_profiles.sh  block_ab.sh  block_c.sh  check_env_keys.sh  create_16_specialists.sh  migrate_memos_to_hermes_official.py  migrate_opencode_agents_to_hermes_profiles.py  phase_c_retire.ps1  phase_c_retire.sh  precheck.sh
profiles/: SOUL.generated.md  hermes_profiles.generated.yaml  user_profile.generated.md
scripts/: ab_report_job.py  apply_marker_blocks.py  behavior_diff.py  bench_latency.py  bench_local_models.py  bootstrap_profile.sh  build_skill_registry.py  calendar_briefing_job.py  capture_growth_metrics.py  check_jobs_meta.py  check_model_caps.py  check_profile_envs.sh  check_wsl_ollama.sh  curator_job.py  delegation_pattern_extractor.py  (+55 more)
(+396 files in other folders)
